// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectableTile/> rendering default matches snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.25s ease-out,box-shadow 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,box-shadow 0.25s ease-out;
  transition: transform 0.25s ease-out,box-shadow 0.25s ease-out;
  gap: 20px;
  border-radius: 8px;
  background: #F9F9F9;
  border: 2px solid transparent;
  padding: 32px;
  color: #151515;
}

.c0:hover {
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transform: scale(1.01);
  box-shadow: 0px 2px 16px RGBA(0,0,0,0.16);
}

.c0:disabled {
  cursor: default;
  opacity: 0.7;
}

.c0:disabled:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
    class="c0"
  >
    <div
      class="c1"
    />
  </button>
</DocumentFragment>
`;

exports[`<SelectableTile/> rendering tile with sample props matches snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.25s ease-out,box-shadow 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,box-shadow 0.25s ease-out;
  transition: transform 0.25s ease-out,box-shadow 0.25s ease-out;
  gap: 20px;
  border-radius: 8px;
  background: #F9F9F9;
  border: 2px solid transparent;
  padding: 32px;
  color: #151515;
}

.c0:hover {
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transform: scale(1.01);
  box-shadow: 0px 2px 16px RGBA(0,0,0,0.16);
}

.c0:disabled {
  cursor: default;
  opacity: 0.7;
}

.c0:disabled:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 16px;
  font-weight: 600;
  line-height: 1.25rem;
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

.c3 {
  text-align: center;
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Collection name
      </span>
      <span
        class="c3"
      >
        15 items
      </span>
    </div>
  </button>
</DocumentFragment>
`;
